--- a/March_2022/LL_SR_03202022.ipynb
+++ b/March_2022/LL_SR_03202022.ipynb
@@ -11,7 +11,7 @@
     "# Name: Leo Lagunes and Paige M.\n",
     "# Date: 07/14/21 \n",
     "\n",
-    "# Last update: 03/22/22\n",
+    "# Last update: 03/26/22\n",
     "\n",
     "# IMPORTANT NOTE: The equations were written and developed by Drs. Eric Deeds and Koan Briggs, this code was developed by LL + PM\n",
     "\n",
@@ -328,7 +328,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -342,7 +342,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
