plot tc wip -LL

--- a/May_2022/LL_SR_05_2022.ipynb
+++ b/May_2022/LL_SR_05_2022.ipynb
@@ -60,7 +60,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Functions ready... 05/02/2022 13:15:45\n"
+      "Functions ready... 05/05/2022 12:13:09\n"
      ]
     }
    ],
@@ -299,7 +299,7 @@
     "\n",
     "states_0 = [IC_1,0.0, 0.0,0.0, 0.0,0.0, 0.0,0.0, 0.0,0.0, 0.0,0.0]\n",
     "\n",
-    "# To intgrate ODEs, we need a vector for time\n",
+    "# To integrate ODEs, we need a vector for time\n",
     "tEnd = 86400 # 24hrs\n",
     "#tEnd = 10**9 # 24hrs\n",
     "t = np.linspace(0,tEnd,2000)\n",
@@ -1482,7 +1482,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# -------------------------------------------------------\n",
+    "# --- Plot AY vs Kd1 vs Kd2 time courses exploration ---\n",
+    "# -------------------------------------------------------\n",
+    "\n",
+    "# extract a few time courses to make sure everything is looking okay - \n",
+    "# is the system reaching ss at 24hrs under these parameters?\n",
+    "# double check the AY calc\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
