keep going on this file -LL

--- a/2022/October_2022/PathwayAnalysis/LL_SR_PathAnalysis_10_2022.ipynb
+++ b/2022/October_2022/PathwayAnalysis/LL_SR_PathAnalysis_10_2022.ipynb
@@ -6,16 +6,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# In this script we want to solve the system of odes for assembling two 3-membered rings  \n",
-    "# with synthesis and degradation NOT included \n",
+    "# In this script we want to determine the contribution of each pathway on stacked trimer assembly\n",
     "# Name: Leo Lagunes and Paige M.\n",
-    "# Date: 07/14/21 \n",
+    "# Date: 10/17/22 \n",
     "\n",
-    "# Last update: 07/12/22\n",
+    "# Last update: 10/17/22 \n",
     "\n",
-    "# IMPORTANT NOTE: The equations were written and developed by Drs. Eric Deeds and Koan Briggs, this code was developed by LL + PM\n",
+    "# IMPORTANT NOTE: The equations were written and developed by Drs. Eric Deeds and Koan Briggs, this code was developed by LL \n",
     "\n",
-    "# Running in python because Julia hasn't really been working just yet\n"
+    "# Running in python \n"
    ]
   },
   {
@@ -49,6 +48,187 @@
     "import matplotlib\n",
     "\n",
     "print('All packages loaded!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Root Node is:\n",
+      "50\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ---------------------------------------------------\n",
+    "# --- BINARY Trees ---\n",
+    "# --------------------------------------------------- \n",
+    "\n",
+    "# Example in python \n",
+    "\n",
+    "class BinaryTreeNode:\n",
+    "  def __init__(self, data):\n",
+    "    self.data = data\n",
+    "    self.leftChild = None\n",
+    "    self.rightChild=None\n",
+    "    \n",
+    "# -------------------------------\n",
+    "# --- Define a tree ---\n",
+    "# -------------------------------\n",
+    "# Defining nodes\n",
+    "node1 = BinaryTreeNode(50)\n",
+    "node2 = BinaryTreeNode(20)\n",
+    "node3 = BinaryTreeNode(45)\n",
+    "node4 = BinaryTreeNode(11)\n",
+    "node5 = BinaryTreeNode(15)\n",
+    "node6 = BinaryTreeNode(30)\n",
+    "node7 = BinaryTreeNode(78)\n",
+    "\n",
+    "# defining children in the tree\n",
+    "node1.leftChild = node2\n",
+    "node1.rightChild = node3\n",
+    "node2.leftChild = node4\n",
+    "node2.rightChild = node5\n",
+    "node3.leftChild = node6\n",
+    "node3.rightChild = node7\n",
+    "\n",
+    "# printing useful information about the tree\n",
+    "print(\"Root Node is:\")\n",
+    "print(node1.data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ---------------------------------------------------\n",
+    "# --- BINARY Trees for pathways ---\n",
+    "# --------------------------------------------------- \n",
+    "\n",
+    "# I need to define a tree for every pathway in the stacked trimer assembly \n",
+    "# there are 46 pathways possible when forming the stacked trimer.\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# From Koan's code\n",
+    "\n",
+    "\n",
+    "# def SpeciesToIndex(S, Species):\n",
+    "#     return int(np.where(np.array(Species.values())==S)[0])\n",
+    "def SpeciesToIndex(S, Species = False):\n",
+    "    SpeciesIndex = {y:i for (i, (x,y)) in enumerate(Species.items())}\n",
+    "    return SpeciesIndex[S]\n",
+    "\n",
+    "# def SpeciesToInt(S):\n",
+    "#     return int(S[::2],2)\n",
+    "def SpeciesToName(S, Species):\n",
+    "    return Species.values()[S]\n",
+    "\n",
+    "class Probabilities(object):\n",
+    "    def __init__(self, Data, Concentrations=False):\n",
+    "        self.Data = Data\n",
+    "        self.ProteinsInSpecies = [sum(x == \"1\" for x in Data.Species.values()[i]) for i in range(Data.SpeciesCount)]\n",
+    "        self._GenReactionsByProduct()\n",
+    "        self.UpdateNorms(Concentrations)\n",
+    "\n",
+    "    def LookupReaction(self, Product, R1 = -1, R2 = -1):\n",
+    "        Out = deque()\n",
+    "        for R in self.Data.Reactions:\n",
+    "            if R[3] == Product:\n",
+    "                Out.append(R)\n",
+    "        if R1 == -1 and R2 == -1:\n",
+    "            return Out\n",
+    "        R1 = int(R1)\n",
+    "        R2 = int(R2)\n",
+    "        for R in Out:\n",
+    "            if R[0] == R1 and R[1] == R2:\n",
+    "                return R\n",
+    "            if R[1] == R1 and R[0] == R2:\n",
+    "                return R\n",
+    "        return False\n",
+    "\n",
+    "    def _GenReactionsByProduct(self):\n",
+    "        ReactionsByProduct = OrderedDict()\n",
+    "        for Species in self.Data.SpeciesConvert.values():\n",
+    "            for R in self.LookupReaction(Species):\n",
+    "                try:\n",
+    "                    ReactionsByProduct[Species].append(R)\n",
+    "                except:\n",
+    "                    ReactionsByProduct[Species] = list()\n",
+    "                    ReactionsByProduct[Species].append(R)\n",
+    "        self.ReactionsByProduct = ReactionsByProduct\n",
+    "\n",
+    "    def UpdateNorms(self, Concentrations = False): \n",
+    "        # Generate the normalization factors (Return list in the same order as the Data.Species list)\n",
+    "        if hasattr(Concentrations, '__iter__'):\n",
+    "            NormsBySpecies = np.zeros(len(Concentrations))\n",
+    "        else:\n",
+    "            Concentrations = np.ones(self.Data.SpeciesCount)\n",
+    "            NormsBySpecies = np.zeros(self.Data.SpeciesCount)\n",
+    "\n",
+    "        for i, Rs in self.ReactionsByProduct.items():\n",
+    "            #print \"{} : {}\".format(i,Rs)\n",
+    "            for R in Rs:\n",
+    "                # R[2]: Forward\n",
+    "                # R[0]: Reactant 1\n",
+    "                # R[1]: Reactant 2\n",
+    "                # R[3]: Product\n",
+    "                NormsBySpecies[i] += R[2]*Concentrations[R[0]]*Concentrations[R[1]]\n",
+    "                #print \"{} : {}\".format(R, NormsBySpecies[i])\n",
+    "        self.Concentrations = Concentrations \n",
+    "        self.NormsBySpecies = NormsBySpecies\n",
+    "\n",
+    "    def UpdateConcentrations(self, Fraction, Concentration): \n",
+    "        #RealConc = np.zeros_like(Fraction)\n",
+    "        RealConc = Fraction*Concentration/self.ProteinsInSpecies\n",
+    "        self.UpdateNorms(RealConc)\n",
+    "\n",
+    "    def ReactionFlux(self, Product, R1, R2):\n",
+    "        Forward = self.LookupReaction(Product, R1, R2)\n",
+    "        if hasattr(Forward, '__iter__'):\n",
+    "            Forward = Forward[2]\n",
+    "        else:\n",
+    "            print \"Reaction for P: {} R1: {} R2: {} Not Found!!!!\".format(Product, R1, R2)\n",
+    "        if self.Concentrations[R1]*self.Concentrations[R2] != 0.0:\n",
+    "            return Forward*self.Concentrations[R1]*self.Concentrations[R2]/(self.NormsBySpecies[Product])\n",
+    "        return 0.0\n",
+    "\n",
+    "    def NodeFlux(self, Graph, Node = \"Root\"):\n",
+    "        if Node == \"Root\":\n",
+    "            Node = self.Data.Species.values()[-1] # Root Node Name\n",
+    "        Product = nx.get_node_attributes(Graph,\"Product\")[Node]\n",
+    "        R1 = nx.get_node_attributes(Graph,\"Reactant1\")[Node]\n",
+    "        R2 = nx.get_node_attributes(Graph,\"Reactant2\")[Node]\n",
+    "        return self.ReactionFlux(Product,R1,R2)\n",
+    "\n",
+    "    def PathIndependentFlux(self, Graph, Probability = True):\n",
+    "        Product = nx.get_node_attributes(Graph,\"Product\").values()\n",
+    "        R1 = nx.get_node_attributes(Graph,\"Reactant1\").values()\n",
+    "        R2 = nx.get_node_attributes(Graph,\"Reactant2\").values()\n",
+    "        Flux = 1.0\n",
+    "        for i in range(len(Product)):\n",
+    "            Flux *= self.ReactionFlux(Product[i],R1[i],R2[i])\n",
+    "        if not Probability:\n",
+    "            # Remove normalization from last step\n",
+    "            Flux *= self.NormsBySpecies[-1]\n",
+    "        return Flux\n",
+    "\n",
+    "    def GetChildren(self, Graph, Node):\n",
+    "        return Graph.successors(Node)\n"
    ]
   },
   {
@@ -1048,7 +1228,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1062,7 +1242,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
