--- a/2022/October_2022/PathwayAnalysis/LL_SR_PathAnalysis_10_2022.ipynb
+++ b/2022/October_2022/PathwayAnalysis/LL_SR_PathAnalysis_10_2022.ipynb
@@ -28,14 +28,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "All packages loaded on  10/24/2022 02:19 PM\n"
+      "All packages loaded on  10/26/2022 03:52 PM\n"
      ]
     }
    ],
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -202,6 +202,7 @@
     "    \n",
     "def findTotalFlux_species(elem_to_find,listFluxTot):\n",
     "    # This function returns the total flux for a specific species\n",
+    "    ini_list=listFluxTot\n",
     "    for sublist in ini_list:\n",
     "    #print('sublist: ', sublist)\n",
     "        if(elem_to_find in sublist):\n",
@@ -212,7 +213,7 @@
     "\n",
     "\n",
     "def calcFHat_path(pathway_rxnFlux,totalFluxes):\n",
-    "    # This function calculates F^\n",
+    "    # This function calculates F^ for one pathway\n",
     "    fHatAll=[]\n",
     "    for rxn_ind in range(0,3): # for each reaction calc F^\n",
     "        # -- gather species and rxn fluxes ---\n",
@@ -232,6 +233,13 @@
     "# ---------------------------------------------------\n",
     "# --- Driver code ---\n",
     "# --------------------------------------------------- \n",
+    "# --- parameters to initialize ---\n",
+    "Q =0\n",
+    "kOn = 10**6 # M^-1 s^-1\n",
+    "# for the purpose of the example, I am listing the concentrations of each species (but should come from the ODE slns at 24hrs)\n",
+    "x_1 = 0.1; x_3 = 0.3; x_6 = 0.6; x_9=0.9; x_10 = 1.0\n",
+    "\n",
+    "\n",
     "# --- Define pathways in a dictionary --- \n",
     "pathway_A = { \"pathwayNodes\": [['x_10','x_9','x_1'],['x_9','x_3','x_1'],['x_3', 'x_1','x_1']],\n",
     "                 \"rxns\": [[x_10,x_9,x_1],[x_9,x_3,x_1],[x_3, x_1,x_1]] }\n",
@@ -243,7 +251,6 @@
     "totalFluxes = {\"species\": ['x_10','x_9','x_6','x_3','x_1'],\n",
     "              \"flux\": [['x_10', kOn*x_9*x_1 + kOn*x_6*x_1], ['x_9', kOn*x_3*x_1], ['x_6', kOn*x_3*x_1], ['x_3', kOn*x_1*x_1],['x_1',1]]\n",
     "                    }\n",
-    "\n",
     "\n",
     "# --- calculate all rxn flux ---\n",
     "pathwayA_rxnFlux = calcFluxOnePath(pathway_A)\n",
@@ -265,6 +272,38 @@
     "plt.ylabel(\"Contribution\")\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "totalFluxes = {\"species\": ['x_10','x_9','x_6','x_3','x_1'],\n",
+    "              \"flux\": [\n",
+    "                  ['x_10', kOn*x_9*x_1 + kOn*x_6*x_1], \n",
+    "                  ['x_9', kOn*x_3*x_1], \n",
+    "                  ['x_6', kOn*x_3*x_1], \n",
+    "                  ['x_3', kOn*x_1*x_1],\n",
+    "                  ['x_1',Q+1]]\n",
+    "                    }\n",
+    "\n",
+    "\n",
+    "\n",
+    " \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    "
    ]
   },
   {
