--- a/2022/November_2022/PathwayAnalysis/LL_SR_PathAnalysis_11_2022.ipynb
+++ b/2022/November_2022/PathwayAnalysis/LL_SR_PathAnalysis_11_2022.ipynb
@@ -28,14 +28,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "All packages loaded on  11/02/2022 10:59 AM\n"
+      "All packages loaded on  11/04/2022 05:31 PM\n"
      ]
     }
    ],
@@ -97,6 +97,7 @@
     "        productR=rxn[0];reactantsR = rxn[1:3]; # product and reactants in this reaction\n",
     "        #print(\"reaction: \" , rxn); print(\"reactants: \" , reactantsR); print(\"product: \" , productR)\n",
     "        # --- flux of this reaction ---\n",
+    "        # I THINK I AM MISSING K_AP (N_WAYS) HERE!! \n",
     "        flux=kOn*np.product(reactantsR); fluxAdd = [rxnStr[0], flux]\n",
     "        #print(fluxAdd)\n",
     "        fluxTotMat.append(fluxAdd) # represents the flux for making species xi from the pathway \n",
@@ -275,9 +276,6 @@
     "# --------------------------------------------------- \n",
     "\n",
     "# --- Define the total flux for each species --- \n",
-    "\n",
-    "# CHANGE ORDER AGAIN!!! AFTER EDITING THE ODE'S! (DO I NEED TO??)\n",
-    "# This might be wrong but I will try to write them out myself\n",
     "totalFluxes = {\"species\": ['x_12','x_11','x_10','x_9','x_8', 'x_7','x_6','x_5','x_4','x_3','x_2','x_1'],\n",
     "              \"flux\": [['x_12',  1*kOn*1*x_1*x_11 + 1*kOn*1*x_3*x_10  + 2*kOn*1*x_2*x_8  + 3*kOn*0.5*x_9*x_9 + 1*kOn*0.5*x_6*x_6  + 1*kOn*0.5*x_4*x_4  ], \n",
     "                       ['x_11', 2*kOn*1*x_1*x_10  + 2*kOn*1*x_1*x_7  + 2*kOn*1*x_1*x_8  + 2*kOn*1*x_1*x_5 + 3*kOn*1*x_3*x_9  + 1*kOn*1*x_3*x_6  + 1*kOn*1*x_3*x_4 + 2*kOn*1*x_2*x_6  + 2*kOn*1*x_2*x_4  ], \n",
@@ -296,6 +294,7 @@
     "# --- Define pathways in a dictionary --- \n",
     "# definitions are in a top-down fashion and left to right. \n",
     "# Each list represents a reaction as ['product', 'reactant 1', 'reactant 2']\n",
+    "# I WANT TO ADD IN A 4TH TERM AS THE K_AP: N_WAYS (AKA THE Association reaction equivalence class cardinality)\n",
     "# each pathway needs to be enumerated but will start with just two for now\n",
     "pathway_1 ={ \"pathwayNodes\": [['x_12','x_9','x_9'], ['x_9','x_3','x_1'],['x_9','x_3','x_1'],['x_3','x_1','x_1'],['x_3','x_1','x_1'] ],\n",
     "                 \"rxns\": [[x_12,x_9,x_9], [x_9,x_3,x_1],[x_9,x_3,x_1],[x_3,x_1,x_1],[x_3,x_1,x_1]] }\n",
@@ -1532,7 +1531,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1546,7 +1545,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
