--- a/2022/November_2022/PathwayAnalysis/LL_SR_PathAnalysis_11_2022.ipynb
+++ b/2022/November_2022/PathwayAnalysis/LL_SR_PathAnalysis_11_2022.ipynb
@@ -97,7 +97,7 @@
     "        productR=rxn[0];reactantsR = rxn[1:3]; # product and reactants in this reaction\n",
     "        #print(\"reaction: \" , rxn); print(\"reactants: \" , reactantsR); print(\"product: \" , productR)\n",
     "        # --- flux of this reaction ---\n",
-    "        # I THINK I AM MISSING K_AP (N_WAYS) HERE!! \n",
+    "        # I THINK I AM MISSING K_AP (N_WAYS) HERE!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! \n",
     "        flux=kOn*np.product(reactantsR); fluxAdd = [rxnStr[0], flux]\n",
     "        #print(fluxAdd)\n",
     "        fluxTotMat.append(fluxAdd) # represents the flux for making species xi from the pathway \n",
@@ -204,6 +204,50 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# List of all the 32 rxns in the format: ['product', 'reactant 1', 'reactant 2', n_ways]\n",
+    "ListOfRxns = [['x_3', 'x_1','x_1',  2]]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# scratch work -- \n",
+    "# calculate the n_ways \n",
+    "\n",
+    "def calc_n_ways(rxnStr):\n",
+    "    # this function determines the n_ways coefficient which represents the Association reaction equivalence class cardinality\n",
+    "    n_ways = 0\n",
+    "    productR=rxnStr[0];reactantsR = rxnStr[1:3]; # product and reactants in this reaction (string)\n",
+    "    \n",
+    "    return n_ways\n",
+    "\n",
+    "\n",
+    "# rxnStr = pathway[\"pathwayNodes\"][rxn_ind];\n",
+    "rxnStr = ['x_12','x_9','x_9']\n",
+    "calc_n_ways(rxnStr)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
@@ -258,7 +302,6 @@
     "solution_1 = odeint(stackedTrimer,states_0,t,rtol = 1e-12, atol = 1e-12)\n",
     "\n",
     "# define each species \n",
-    "# CHANGE ORDER AGAIN!!! AFTER EDITING THE ODE'S!\n",
     "x_1 = solution_1[-1,0]; x_2 = solution_1[-1,2]; x_3 = solution_1[-1,1];\n",
     "x_4 = solution_1[-1,5]; x_5 = solution_1[-1,9]; x_6 = solution_1[-1,4];\n",
     "x_7 = solution_1[-1,7]; x_8 = solution_1[-1,8]; x_9 = solution_1[-1,3];\n",
